fixed delay and remove primary